--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -4,6 +4,7 @@
   font-size: $btn-font-size;
   line-height: 1;
   font-family: $type1-bold;
+  display: grid !important;
   i {
     font-size: 1rem;
   }
