--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -115,13 +115,13 @@ reddit: #ff4500);
 $type-1: 'roboto',
 sans-serif;
 $type-2: $type-1;
-$type1-light: 'ubuntu-light',
+$type1-light: 'Inter-light',
 sans-serif;
-$type1-regular: 'ubuntu-regular',
+$type1-regular: 'Inter-regular',
 sans-serif;
-$type1-medium: 'ubuntu-medium',
+$type1-medium: 'Inter-medium',
 sans-serif;
-$type1-bold: 'ubuntu-bold',
+$type1-bold: 'Inter-bold',
 sans-serif;
 
 $default-font-size: .875rem; // 14px as base font size
