Few changes for super admin dashboard

--- a/assets/scss/components/_cards.scss
+++ b/assets/scss/components/_cards.scss
@@ -1,6 +1,7 @@
 /* Cards */
 
 .card {
+  box-shadow: 0.3rem 0.3rem 0.6rem #c8d0e7, -0.2rem -0.2rem 0.5rem #ffffff !important;
   border: 0;
   background: $card-bg;
   .card-body {
