--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5688,6 +5688,7 @@ textarea.form-control-lg {
   min-width: 0;
   word-wrap: break-word;
   background-color: #fff;
+  box-shadow: 0.3rem 0.3rem 0.6rem #c8d0e7, -0.2rem -0.2rem 0.5rem #e4e6ed !important;
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.3125rem; }
@@ -14108,6 +14109,7 @@ dl {
 
 /* Sidebar */
 .sidebar {
+  box-shadow: 0.3rem 0.3rem 0.6rem #e9eaf0, -0.2rem -0.2rem 0.5rem #fff !important;
   min-height: calc(100vh - 70px);
   background: #ffffff;
   font-family: "Inter-regular", sans-serif;
@@ -14128,7 +14130,7 @@ dl {
     flex-direction: column;
     margin-bottom: 60px; }
     .sidebar .nav .nav-item {
-      padding: 0 2.25rem;
+      padding: 0 2.25rem 0 1rem;
       -webkit-transition-duration: 0.25s;
       transition-duration: 0.25s;
       transition-property: background;
@@ -14154,7 +14156,8 @@ dl {
           .sidebar .nav .nav-item .nav-link i.menu-icon {
             font-size: 1.125rem;
             line-height: 1;
-            margin-left: auto;
+            margin-right: 10px;
+            /* margin-left: auto; */
             color: #bba8bff5; }
             .rtl .sidebar .nav .nav-item .nav-link i.menu-icon {
               margin-left: 0;
@@ -14165,7 +14168,7 @@ dl {
             font: normal normal normal 24px/1 "Material Design Icons";
             line-height: 1;
             font-size: 1.125rem;
-            margin-left: auto;
+            /* margin-left: auto; */
             color: #9e9da0; }
             .rtl .sidebar .nav .nav-item .nav-link i.menu-arrow {
               margin-left: 0;
