--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4206,7 +4206,29 @@ textarea.form-control-lg {
   .input-group .form-select:invalid:focus,
   .input-group .form-select.is-invalid:focus {
     z-index: 3; }
-
+    .btn1 {
+      display: grid;
+      display: inline-block;
+      font-weight: 400;
+      line-height: 1;
+      color: #343a40;
+      text-align: center;
+      text-decoration: none;
+      vertical-align: middle;
+      cursor: pointer;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+      background-color: transparent;
+      border: 1px solid transparent;
+      padding: 0.875rem 2.5rem;
+      font-size: 0.875rem;
+      border-radius: 0.1875rem;
+      -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+      transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+      transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+      transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out; }
 .btn {
   display: grid;
   display: inline-block;
