--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -5,6 +5,7 @@
   line-height: 1;
   font-family: $type1-bold;
   display: grid !important;
+  padding: 15px 30px !important;
   i {
     font-size: 1rem;
   }
@@ -90,7 +91,53 @@
     padding: 0;
   }
 }
-
+.btn2 {
+  font-size: $btn-font-size;
+  line-height: 1;
+  font-family: $type1-bold;
+  display: inline !important;
+  padding: 10px 30px !important;
+  border-radius: 25px !important;
+  i {
+    font-size: 1rem;
+  }
+  &.btn-rounded {
+    @include border-radius(50px);
+  }
+  &.btn-fw {
+    min-width: $button-fixed-width;
+  }
+  &.btn-sm {
+    font-size: $btn-font-size-sm;
+  }
+  &.btn-lg {
+    font-size: $btn-font-size-lg;
+  }
+  &.btn-xs {
+    padding: $btn-padding-y-xs $btn-padding-x-xs;
+    font-size: $btn-font-size-xs;
+  }
+  /* Buttons with only icons */
+  &.btn-icon {
+    width: 42px;
+    height: 42px;
+    padding: 0;
+  }
+  /* Buttons with icon and text */
+  &.btn-icon-text {
+    .btn-icon-prepend {
+      margin-right: .5rem;
+    }
+    .btn-icon-append {
+      margin-left: .5rem;
+    }
+  }
+  &.btn-social-icon {
+    width: 50px;
+    height: 50px;
+    padding: 0;
+  }
+}
 .btn-group {
   .btn {
     + .btn {
