--- a/assets/scss/components/_forms.scss
+++ b/assets/scss/components/_forms.scss
@@ -17,9 +17,11 @@
 }
 .form-control {
   border: 1px solid $border-color;
-  padding: 14px 40px !important;
+   padding: 14px 40px !important;
   font-family: $type1-regular;
   font-size: $input-font-size;
+  //padding: 18px 40px !important;
+  border-radius: 15px !important;
   &:focus {
     background-color: $form-focus-bg;
     color: $form-focus-color;
