--- a/partials/_navbar.html
+++ b/partials/_navbar.html
@@ -18,7 +18,7 @@
       </form>
     </div>
     <ul class="navbar-nav navbar-nav-right">
-      <li class="nav-item nav-profile dropdown">
+      <!-- <li class="nav-item nav-profile dropdown">
         <a class="nav-link dropdown-toggle" id="profileDropdown" href="#" data-bs-toggle="dropdown" aria-expanded="false">
           <div class="nav-profile-img">
             <img src="assets/images/faces/face1.jpg" alt="image">
@@ -35,7 +35,7 @@
           <a class="dropdown-item" href="#">
             <i class="mdi mdi-logout me-2 text-primary"></i> Signout </a>
         </div>
-      </li>
+      </li> -->
       <li class="nav-item d-none d-lg-block full-screen-link">
         <a class="nav-link">
           <i class="mdi mdi-fullscreen" id="fullscreen-button"></i>
