--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14588,3 +14588,9 @@ dl {
   font-size: 15px;
   font-weight: 400;
 }
+.pfont{
+  font-size: 14px;
+}
+.card-label{
+  font-size: 14px !important;
+}
