--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14513,8 +14513,14 @@ dl {
 }
 .inputfieldform{
   vertical-align: middle !important;
-  padding: 18px 30px !important; 
+  padding: 18px 25px !important; 
   border-radius: 15px !important;
+}
+.btn1{
+  padding: 10px 20px !important; 
+  border-radius: 25px !important; 
+  font-size: 12px;
+  
 }
 .editbtn{
   padding: 9.2px 25px !important; 
