--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14616,6 +14616,9 @@ dl {
 .form-check-label{
   font-size: 17px !important;
 }
+.form-check-label1{
+  font-size: 15px !important;
+}
 .card-title{
   font-size: 17px !important;
 
